Light code cleanup